deploy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oan-stake-dashboard-api
spec:
  replicas: 2
  selector:
    matchLabels:
      name: oan-stake-dashboard-api
  template:
    metadata:
      labels:
        name: oan-stake-dashboard-api
    spec:
      containers:
        - name: application
          image: <oan-stake-dashboard-api_image:version>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oan-stake-dashboard-api-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: oan-stake-dashboard-api
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oan-stake-dashboard-api-batch
spec:
  replicas: 1
  selector:
    matchLabels:
      name: oan-stake-dashboard-api-batch
  template:
    metadata:
      labels:
        name: oan-stake-dashboard-api-batch
    spec:
      containers:
        - name: application
          image: <oan-stake-dashboard-api_image:version>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
