deploy/mainnet-batch-service.yml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mainnet-batch
subsets:
  - addresses:
      - ip: <aion_batch_node_ip>
    ports:
      - port: 8545
---
kind: Service
apiVersion: v1
metadata:
  name: mainnet-batch
spec:
  type: ClusterIP
  ports:
    - port: 8545
      targetPort: 8545
