deploy/kubernetes-ingress.yml
# ingress yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oan-stake-board-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: <api_host_url>
      http:
        paths:
          - backend:
              serviceName: oan-stake-dashboard-api-service
              servicePort: 80
